--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,9 @@
+management.endpoints.web.exposure.include: "*"
+
 eureka:
    client:
       serviceUrl:
          defaultZone: http://localhost:9000/eureka
       instance:
       preferIpAddress: true
+      
