--- a/application.yml
+++ b/application.yml
@@ -6,4 +6,5 @@ eureka:
          defaultZone: http://localhost:9000/eureka
       instance:
       preferIpAddress: true
+      hostname: localhost
       
