--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,9 @@
 management.endpoints.web.exposure.include: "*"
 
+spring:
+  zipkin:
+    base-url: http://localhost:9411/
+
 eureka:
    client:
       serviceUrl:
