--- a/application.yml
+++ b/application.yml
@@ -8,4 +8,6 @@ eureka:
    instance:
       preferIpAddress: true
       hostname: localhost
+   zipkin:
+        baseUrl: http://localhost:9411   
       
