--- a/application.yml
+++ b/application.yml
@@ -3,11 +3,11 @@ management.endpoints.web.exposure.include: "*"
 eureka:
    client:
       serviceUrl:
-         defaultZone: http://localhost:8761/eureka
+         defaultZone: http://13.114.98.162:8761/eureka
          #defaultZone: http://localhost:8761/eureka
    instance:
       preferIpAddress: true
-      hostname: localhost
+      hostname: 13.114.98.162
    zipkin:
-        baseUrl: http://localhost:9411   
+        baseUrl: http://18.182.26.212:9411   
       
